--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,4 +13,9 @@
   {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
+  <!-- Favicon Images -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{{site.BaseURL}}assets/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{site.BaseURL}}assets/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{site.BaseURL}}assets/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="{{site.BaseURL}}assets/favicon_io/site.webmanifest">
 </head>
